--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <div class="date">Nov 2020 - Present</div>
                         <div class="info">
                             <p class="semi-bold">Khosouf Studio</p>
-                            <p>Mobile App Developer</p>
+                            <p>Game Developer</p>
                             <p>Internship</p>
                             <br/>
                         </div>
@@ -209,21 +209,21 @@
                 <ul>
                     <li>
                         <div class="date ">2018 – 2022</div>
-                        <div class="info ">
+                        <div class="info">
                             <p class="semi-bold ">SAE Institute Dubai</p>
                             <p>Bachelor of Games Development<br/>Specialized in Games Programming</p><br/>
                         </div>
                     </li>
                     <li>
                         <div class="date ">2015 - 2018</div>
-                        <div class="info ">
+                        <div class="info">
                             <p class="semi-bold ">Bright Riders AUH</p>
                             <p>PCMC (Physics, Chemistry, Maths, Computer Science)<br/>Specialized in Computer Science<br/>Grade 9 - Grade 12</p>
                         </div>
                     </li>
                     <li>
                         <div class="date ">2005 - 2014</div>
-                        <div class="info ">
+                        <div class="info">
                             <p class="semi-bold ">Our Own English High School– AUH</p>
                             <p>KG1 - Grade 8</p>
                         </div>
@@ -236,17 +236,86 @@
                 </div>
                 <ul>
                     <li>
+                        <div class="date ">May 2021</div>
+                        <div class="info">
+                            <p class="semi-bold ">Boss Bunny Game Jam</p>
+                            <p>Participation<br/>Participation in the game jam with official entry 'James Wick':
+                                <a href="https://flamencoman.itch.io/james-wick" target="_blank">https://flamencoman.itch.io/james-wick</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">Jan 2021</div>
+                        <div class="info">
+                            <p class="semi-bold ">Global Game Jam</p>
+                            <p>Participation<br/>Participation in the game jam with official entry 'Skill Crisis':
+                                <a href="https://flamencoman.itch.io/skill-crisis" target="_blank">https://flamencoman.itch.io/skill-crisis</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
                         <div class="date ">Oct 2019</div>
-                        <div class="info ">
+                        <div class="info">
                             <p class="semi-bold ">Liv. Hackathon</p>
                             <p>Certificate of Appreciation<br/>For Participation in The Liv. Hackathon at Amity University Dubai Entrepreneurship Week</p>
                         </div>
                     </li>
                     <li>
                         <div class="date ">2017</div>
-                        <div class="info ">
+                        <div class="info">
                             <p class="semi-bold ">ADEK Program Your Idea</p>
                             <p>Selected for Final Cycle for the project Learning With Steam<br/><a href="https://scratch.mit.edu/projects/163267059/" target="_blank">https://scratch.mit.edu/projects/163267059/</a></p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="resume_item resume_majorprojects">
+                <div class="title ">
+                    <p class="bold ">MAJOR PROJECTS</p>
+                </div>
+                <ul>
+                    <li>
+                        <div class="date ">2017</div>
+                        <div class="info">
+                            <p class="semi-bold ">Pablo Let's Go Bar</p>
+                            <p>Windows, Mac</p>
+                            <p>
+                                <a href="https://flamencoman.itch.io/projectplgb" target="_blank">https://flamencoman.itch.io/projectplgb</a>
+                            </p>
+                            <br>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">2017</div>
+                        <div class="info">
+                            <p class="semi-bold ">Augmenting Reality</p>
+                            <p>Windows, Mac</p>
+                            <p>
+                                <a href="https://blankrip.itch.io/augmenting-reality" target="_blank">https://blankrip.itch.io/augmenting-reality</a>
+                            </p>
+                            <br>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">2017</div>
+                        <div class="info">
+                            <p class="semi-bold ">The Last Mercenary</p>
+                            <p>Windows, Mac</p>
+                            <p>
+                                <a href="https://shaded-wireframe.itch.io/the-last-mercenary" target="_blank">https://shaded-wireframe.itch.io/the-last-mercenary</a>
+                            </p>
+                            <br>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">2017</div>
+                        <div class="info">
+                            <p class="semi-bold ">Rattle Em Up</p>
+                            <p>Windows, Mac</p>
+                            <p>
+                                <a href="https://cemetery-studios.itch.io/rattle-em-up" target="_blank">https://cemetery-studios.itch.io/rattle-em-up</a>
+                            </p>
+                            <br>
                         </div>
                     </li>
                 </ul>
