Cleaned up skills

--- a/index.html
+++ b/index.html
@@ -64,31 +64,59 @@
                         <table>
                             <tr>
                                 <td>Unity</td>
+                                <td>4 years</td>
+                            </tr>
+                            <tr>
                                 <td>C#</td>
+                                <td>4 years</td>
                             </tr>
                             <tr>
                                 <td>Photoshop</td>
+                                <td>5 years</td>
+                            </tr>
+                            <tr>
                                 <td>Git</td>
+                                <td>4 years</td>
+                            </tr>
+                            <tr>
+                                <td>Unreal</td>
+                                <td>1 year</td>
                             </tr>
                             <tr>
                                 <td>C++</td>
+                                <td>3 years</td>
+                            </tr>
+                            <tr>
                                 <td>Writing</td>
+                                <td>5 years</td>
                             </tr>
                             <tr>
                                 <td>Game Design</td>
+                                <td>4 years</td>
+                            </tr>
+                            <tr>
                                 <td>Level Design</td>
+                                <td>4 years</td>
                             </tr>
                             <tr>
                                 <td>Bugfixing</td>
-                                <td>AGILE</td>
+                                <td>3 years</td>
                             </tr>
                             <tr>
-                                <td>SQL</td>
+                                <td>AGILE</td>
+                                <td>4 years</td>
+                            </tr>
+                            <tr>
                                 <td>JavaScript</td>
+                                <td>1 year</td>
                             </tr>
                             <tr>
                                 <td>HTML</td>
+                                <td>1 year</td>
+                            </tr>
+                            <tr>
                                 <td>SFML</td>
+                                <td>1 year</td>
                             </tr>
                         </table>
                     </ul>
