--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         <div class="info">
                             <p class="semi-bold">Khosouf Studio</p>
                             <p>Game Developer</p>
-                            <p>Internship</p>
+                            <p>Part-time</p>
                             <br/>
                         </div>
                     </li>
