--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                         <div class="date">Feb 2021 - Present</div>
                         <div class="info">
                             <p class="semi-bold">Knotgames</p>
-                            <p>Game Developer, Marketing Lead</p>
+                            <p>Game Developer</p>
+                            <p>Marketing Lead</p>
                             <p>Full-time</p>
-                            <br/>
                         </div>
                     </li>
                     <li>
@@ -225,7 +225,6 @@
                             <p class="semi-bold">Khosouf Studio</p>
                             <p>Game Developer</p>
                             <p>Part-time</p>
-                            <br/>
                         </div>
                     </li>
                 </ul>
@@ -239,7 +238,7 @@
                         <div class="date ">2018 – 2022</div>
                         <div class="info">
                             <p class="semi-bold ">SAE Institute Dubai</p>
-                            <p>Bachelor of Games Development<br/>Specialized in Games Programming</p><br/>
+                            <p>Bachelor of Games Development<br/>Specialized in Games Programming</p>
                         </div>
                     </li>
                 </ul>
