--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     </div>
                     <ul>
                         </table>
-                        <td>English</td>
-                        <td>Hindi</td>
+                        <td>English, </td>
+                        <td>Hindi, </td>
                         <td>Malayalam</td>
                         </table>
                     </ul>
