--- a/index.html
+++ b/index.html
@@ -256,6 +256,15 @@
                     <li>
                         <div class="date ">July 2021</div>
                         <div class="info">
+                            <p class="semi-bold ">HOPE VR Steam Page Live</p>
+                            <p>Developer Achievement<br/>The steam page for "HOPE VR" is now live:
+                                <a href="https://store.steampowered.com/app/1703740/HOPE_VR_Emotional_Intelligence_Assistant/" target="_blank">Wishlist Now</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">July 2021</div>
+                        <div class="info">
                             <p class="semi-bold ">PLGB Steam Page Live</p>
                             <p>Developer Achievement<br/>The steam page for the game "Pablo Lets Go Bar" is now live:
                                 <a href="https://store.steampowered.com/app/1676180/Pablo_Lets_Go_Bar/" target="_blank">Wishlist Now</a>
