--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <div class="date ">July 2021</div>
                         <div class="info">
                             <p class="semi-bold ">HOPE VR Steam Page Live</p>
-                            <p>Developer Achievement<br/>The steam page for "HOPE VR" is now live:
+                            <p>Developer Achievement<br/>The steam page for "HOPE VR: Emotional Intelligence Assistant" is now live:
                                 <a href="https://store.steampowered.com/app/1703740/HOPE_VR_Emotional_Intelligence_Assistant/" target="_blank">Wishlist Now</a>
                             </p>
                         </div>
