--- a/index.html
+++ b/index.html
@@ -272,6 +272,15 @@
                         </div>
                     </li>
                     <li>
+                        <div class="date ">June 2021</div>
+                        <div class="info">
+                            <p class="semi-bold ">SAE Showcase 2021</p>
+                            <p>Winner<br/>Won Best Studio Game for SAE Showcase 2021
+                                <br><a href="https://store.steampowered.com/app/1676180/Pablo_Lets_Go_Bar/" target="_blank">Wishlist Now</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
                         <div class="date ">May 2021</div>
                         <div class="info">
                             <p class="semi-bold ">Boss Bunny Game Jam</p>
