--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <div class="info">
                             <p class="semi-bold">Khosouf Studio</p>
                             <p>Game Developer</p>
-                            <p>Part-time</p>
+                            <p>Full-time</p>
                         </div>
                     </li>
                 </ul>
