--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     <li>
                         <div class="date ">2018 – 2021</div>
                         <div class="info">
-                            <p class="semi-bold ">SAE Institute Dubai</p>
+                            <p class="semi-bold ">SAE Institute</p>
                             <p>Bachelor of Games Development<br/>Specialized in Games Programming</p>
                         </div>
                     </li>
@@ -253,6 +253,15 @@
                     <p class="bold ">ACHIEVEMENTS</p>
                 </div>
                 <ul>
+                    <li>
+                        <div class="date ">January 2022</div>
+                        <div class="info">
+                            <p class="semi-bold ">Astral Hound VR Steam Page Live</p>
+                            <p>Developer Achievement<br/>The steam page for "HOPE VR: Emotional Intelligence Assistant" is now live:
+                                <a href="https://store.steampowered.com/app/1727610/Astral_Hound_VR/" target="_blank">Wishlist Now</a>
+                            </p>
+                        </div>
+                    </li>
                     <li>
                         <div class="date ">July 2021</div>
                         <div class="info">
