--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <div class="info">
                             <p class="semi-bold ">HOPE VR Steam Page Live</p>
                             <p>Developer Achievement<br/>The steam page for "HOPE VR: Emotional Intelligence Assistant" is now live:
-                                <a href="https://store.steampowered.com/app/1703740/HOPE_VR_Emotional_Intelligence_Assistant/" target="_blank">Wishlist Now</a>
+                                <a href="https://store.steampowered.com/app/1703740/HOPE_VR_Emotional_Intelligence_Assistant/" target="_blank">Buy Now</a>
                             </p>
                         </div>
                     </li>
