--- a/index.html
+++ b/index.html
@@ -37,14 +37,6 @@
                         </li>
                         <li>
                             <div class="icon">
-                                <i class="fas fa-mobile-alt"></i>
-                            </div>
-                            <div class="data">
-                                +971 529680246
-                            </div>
-                        </li>
-                        <li>
-                            <div class="icon">
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <div class="data">
@@ -216,19 +208,19 @@
                 </div>
                 <ul>
                     <li>
-                        <div class="date">Feb 2021 - Present</div>
-                        <div class="info">
-                            <p class="semi-bold">Knotgames</p>
-                            <p>Game Developer</p>
-                            <p>Marketing Lead</p>
-                            <p>Full-time</p>
-                        </div>
-                    </li>
-                    <li>
                         <div class="date">Nov 2020 - Present</div>
                         <div class="info">
                             <p class="semi-bold">Khosouf Studio</p>
                             <p>Game Developer</p>
+                            <p>Full-time</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date">Feb 2021 - January 2022</div>
+                        <div class="info">
+                            <p class="semi-bold">Knotgames</p>
+                            <p>Game Developer</p>
+                            <p>Marketing Lead</p>
                             <p>Full-time</p>
                         </div>
                     </li>
