--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <div class="info">
                             <p class="semi-bold">Knotgames</p>
                             <p>Game Developer</p>
-                            <p>Marketing Lead</p>
+                            <!-- <p>Marketing Lead</p> -->
                             <p>Full-time</p>
                         </div>
                     </li>
