--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <li>
                             <div class="data">
                                 <p class="semi-bold">IELTS</p>
-                                <p>Oct 2019</p>
+                                <!-- <p>Oct 2019</p> -->
                                 <p>8.0</p>
                             </div>
                         </li>
