--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
                                 Abu Dhabi, <br /> United Arab Emirates
                             </div>
                         </li>
-                        <li>
+                        <!-- <li>
                             <div class="icon">
                                 <i class="fas fa-envelope"></i>
                             </div>
                             <div class="data">
                                 vishnuraveendran246<br />@gmail.com
                             </div>
-                        </li>
+                        </li> -->
                         <li>
                             <div class="icon">
                                 <i class="fab fa-weebly"></i>
                             </div>
                             <div class="data">
-                                <a href="https://vishnuraveendran24.wixsite.com/vishnuportfolio" target="_blank">Website</a>
+                                <a href="https://vishnuraveendran24.wixsite.com/vishnuportfolio" target="_blank">Portfolio</a>
                             </div>
                         </li>
                     </ul>
