--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <div class="date">Nov 2020 - Present</div>
                         <div class="info">
                             <p class="semi-bold">Khosouf Studio</p>
-                            <p>Game Developer</p>
+                            <p>Lead Developer</p>
                             <p>Full-time</p>
                         </div>
                     </li>
