--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Vishnu's CV</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="images/favicon-16.png">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 
@@ -77,7 +77,7 @@
                             </tr>
                             <tr>
                                 <td>Photoshop</td>
-                                <td>6 years</td>
+                                <td>5 years</td>
                             </tr>
                             <tr>
                                 <td>Git</td>
@@ -181,7 +181,9 @@
                 <div class="title">
                     <p class="bold">About Me</p>
                 </div>
-                <p>As a passionate and motivated professional, I’m constantly striving to improve my techniques, expand my skill set and find new opportunities to grow. Each of my projects - both solo and collaborative - have provided this growth and allowed
+                <p>As a passionate and motivated professional, I’m constantly striving to improve my techniques, expand
+                    my skill set and find new opportunities to grow. Each of my projects - both solo and collaborative -
+                    have provided this growth and allowed
                     me to establish myself within this competitive industry.</p>
             </div>
             <div class="resume_item resume_work">
@@ -216,11 +218,12 @@
                         <div class="date ">2018 – 2021</div>
                         <div class="info">
                             <p class="semi-bold ">SAE Institute</p>
-                            <p>Bachelor of Games Development<br/>Specialized in Games Programming</p>
+                            <p>Bachelor of Games Development<br />Specialized in Games Programming</p>
                         </div>
                     </li>
                 </ul>
             </div>
+
             <div class="resume_item resume_achievements">
                 <div class="title ">
                     <p class="bold ">ACHIEVEMENTS</p>
@@ -230,8 +233,9 @@
                         <div class="date ">June 2021</div>
                         <div class="info">
                             <p class="semi-bold ">SAE Showcase 2021</p>
-                            <p>Winner<br/>Won Best Studio Game for SAE Showcase 2021
-                                <br><a href="https://store.steampowered.com/app/1676180/Pablo_Lets_Go_Bar/" target="_blank">Wishlist Now</a>
+                            <p>Winner<br />Won Best Studio Game for SAE Showcase 2021
+                                <br><a href="https://store.steampowered.com/app/1676180/Pablo_Lets_Go_Bar/"
+                                    target="_blank">Wishlist Now</a>
                             </p>
                         </div>
                     </li>
@@ -239,8 +243,9 @@
                         <div class="date ">May 2021</div>
                         <div class="info">
                             <p class="semi-bold ">Boss Bunny Game Jam</p>
-                            <p>Participation<br/>Participation in the game jam with official entry 'James Wick':
-                                <a href="https://flamencoman.itch.io/james-wick" target="_blank">https://flamencoman.itch.io/james-wick</a>
+                            <p>Participation<br />Participation in the game jam with official entry 'James Wick':
+                                <a href="https://flamencoman.itch.io/james-wick"
+                                    target="_blank">https://flamencoman.itch.io/james-wick</a>
                             </p>
                         </div>
                     </li>
@@ -248,8 +253,9 @@
                         <div class="date ">Jan 2021</div>
                         <div class="info">
                             <p class="semi-bold ">Global Game Jam</p>
-                            <p>Participation<br/>Participation in the game jam with official entry 'Skill Crisis':
-                                <a href="https://flamencoman.itch.io/skill-crisis" target="_blank">https://flamencoman.itch.io/skill-crisis</a>
+                            <p>Participation<br />Participation in the game jam with official entry 'Skill Crisis':
+                                <a href="https://flamencoman.itch.io/skill-crisis"
+                                    target="_blank">https://flamencoman.itch.io/skill-crisis</a>
                             </p>
                         </div>
                     </li>
@@ -257,14 +263,17 @@
                         <div class="date ">Oct 2019</div>
                         <div class="info">
                             <p class="semi-bold ">Liv. Hackathon</p>
-                            <p>Certificate of Appreciation<br/>For Participation in The Liv. Hackathon at Amity University Dubai Entrepreneurship Week</p>
+                            <p>Certificate of Appreciation<br />For Participation in The Liv. Hackathon at Amity
+                                University Dubai Entrepreneurship Week</p>
                         </div>
                     </li>
                     <li>
                         <div class="date ">2017</div>
                         <div class="info">
                             <p class="semi-bold ">ADEK Program Your Idea</p>
-                            <p>Selected for Final Cycle for the project Learning With Steam<br/><a href="https://scratch.mit.edu/projects/163267059/" target="_blank">https://scratch.mit.edu/projects/163267059/</a></p>
+                            <p>Selected for Final Cycle for the project Learning With Steam<br /><a
+                                    href="https://scratch.mit.edu/projects/163267059/"
+                                    target="_blank">https://scratch.mit.edu/projects/163267059/</a></p>
                         </div>
                     </li>
                 </ul>
