--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <title>Vishnu's CV</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/png" href="images/bg.png">
+
+    <!--FAVICON-->
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
+
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 
