Added in all awards and education info

--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@
                             <p>Bachelor of Games Development<br />Specialized in Games Programming</p>
                         </div>
                     </li>
+                    <li>
+                        <div class="date ">2014 – 2018</div>
+                        <div class="info">
+                            <p class="semi-bold ">Bright Riders School</p>
+                            <p>Higher Secondary School<br />Class IX to XII</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">2006 – 2014</div>
+                        <div class="info">
+                            <p class="semi-bold ">Our Own English High School</p>
+                            <p>Primary School<br />Class I to VIII</p>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
@@ -233,12 +247,32 @@
                 </div>
                 <ul>
                     <li>
+                        <div class="date ">March 2023</div>
+                        <div class="info">
+                            <p class="semi-bold ">NYX Game Awards 2023</p>
+                            <p>Winner<br />Won Silver Award For Best PC VR Game
+                                <br><a href="https://store.steampowered.com/app/2063120/Box_To_The_Beat_VR/"
+                                    target="_blank">View</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="date ">November 2021</div>
+                        <div class="info">
+                            <p class="semi-bold ">NYX Game Awards 2021</p>
+                            <p>Winner<br />Won Silver Award For Best PC Shooter Game
+                                <br><a href="https://store.steampowered.com/app/1088760/Shadow_Dreams_The_Last_Thought_of_Hope/"
+                                    target="_blank">View</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
                         <div class="date ">June 2021</div>
                         <div class="info">
                             <p class="semi-bold ">SAE Showcase 2021</p>
                             <p>Winner<br />Won Best Studio Game for SAE Showcase 2021
                                 <br><a href="https://store.steampowered.com/app/1676180/Pablo_Lets_Go_Bar/"
-                                    target="_blank">Wishlist Now</a>
+                                    target="_blank">View</a>
                             </p>
                         </div>
                     </li>
@@ -246,9 +280,9 @@
                         <div class="date ">May 2021</div>
                         <div class="info">
                             <p class="semi-bold ">Boss Bunny Game Jam</p>
-                            <p>Participation<br />Participation in the game jam with official entry 'James Wick':
-                                <a href="https://flamencoman.itch.io/james-wick"
-                                    target="_blank">https://flamencoman.itch.io/james-wick</a>
+                            <p>Participation<br />Participation with the official entry 'James Wick':
+                                <br><a href="https://flamencoman.itch.io/james-wick"
+                                    target="_blank">View</a>
                             </p>
                         </div>
                     </li>
@@ -256,9 +290,9 @@
                         <div class="date ">Jan 2021</div>
                         <div class="info">
                             <p class="semi-bold ">Global Game Jam</p>
-                            <p>Participation<br />Participation in the game jam with official entry 'Skill Crisis':
-                                <a href="https://flamencoman.itch.io/skill-crisis"
-                                    target="_blank">https://flamencoman.itch.io/skill-crisis</a>
+                            <p>Participation<br />Participation with the official entry 'Skill Crisis':
+                                <br><a href="https://flamencoman.itch.io/skill-crisis"
+                                    target="_blank">View</a>
                             </p>
                         </div>
                     </li>
@@ -276,7 +310,7 @@
                             <p class="semi-bold ">ADEK Program Your Idea</p>
                             <p>Selected for Final Cycle for the project Learning With Steam<br /><a
                                     href="https://scratch.mit.edu/projects/163267059/"
-                                    target="_blank">https://scratch.mit.edu/projects/163267059/</a></p>
+                                    target="_blank">View</a></p>
                         </div>
                     </li>
                 </ul>
