--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="resume">
         <div class="resume_left">
             <div class="resume_profile">
-                <img src="images/Headshot_Vishnu.jpg" alt="profile_pic">
+                <img src="images/Headshot_Vishnu.png" alt="profile_pic">
             </div>
             <div class="resume_content">
                 <div class="resume_item resume_info">
