--- a/index.html
+++ b/index.html
@@ -64,58 +64,54 @@
                         <table>
                             <tr>
                                 <td>Unreal</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>Unity</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>C#</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>C++</td>
-                                <td>3 years</td>
+                                <td>4 years</td>
                             </tr>
                             <tr>
                                 <td>Photoshop</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>Git</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>Writing</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>Game Design</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>Level Design</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>Bugfixing</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>AGILE</td>
-                                <td>5 years</td>
+                                <td>6 years</td>
                             </tr>
                             <tr>
                                 <td>JavaScript</td>
-                                <td>1 year</td>
+                                <td>2 year</td>
                             </tr>
                             <tr>
                                 <td>HTML</td>
-                                <td>1 year</td>
-                            </tr>
-                            <tr>
-                                <td>SFML</td>
                                 <td>1 year</td>
                             </tr>
                         </table>
@@ -129,6 +125,7 @@
                         </table>
                         <td>English, </td>
                         <td>Hindi, </td>
+                        <td>Urdu, </td>
                         <td>Malayalam</td>
                         </table>
                     </ul>
