--- a/index.html
+++ b/index.html
@@ -244,6 +244,16 @@
                 </div>
                 <ul>
                     <li>
+                        <div class="date ">January 2024</div>
+                        <div class="info">
+                            <p class="semi-bold ">Global Game Jam 2024</p>
+                            <p>Winner<br />Won Best Game For "Crash N Cash"
+                                <br><a href="https://youtu.be/3iM_kkLEyuM"
+                                    target="_blank">View</a>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
                         <div class="date ">March 2023</div>
                         <div class="info">
                             <p class="semi-bold ">NYX Game Awards 2023</p>
@@ -286,7 +296,7 @@
                     <li>
                         <div class="date ">Jan 2021</div>
                         <div class="info">
-                            <p class="semi-bold ">Global Game Jam</p>
+                            <p class="semi-bold ">Global Game Jam 2021</p>
                             <p>Participation<br />Participation with the official entry 'Skill Crisis':
                                 <br><a href="https://flamencoman.itch.io/skill-crisis"
                                     target="_blank">View</a>
