--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </table>
                     </ul>
                 </div>
-                <div class="resume_item resume_scores">
+                <!-- <div class="resume_item resume_scores">
                     <div class="title">
                         <p class="bold">Scores</p>
                     </div>
@@ -138,11 +138,11 @@
                         <li>
                             <div class="data">
                                 <p class="semi-bold">IELTS</p>
-                                <!-- <p>Oct 2019</p> -->
+                                <p>Oct 2019</p>
                                 <p>8.0</p>
                             </div>
                         </li>
-                        <!-- <li>
+                        <li>
                             <div class="data">
                                 <p class="semi-bold">SAT</p>
                                 <p>Oct 2017</p>
@@ -155,9 +155,9 @@
                                 <p>Oct 2017</p>
                                 <p>3/3/3</p>
                             </div>
-                        </li> -->
+                        </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="resume_item resume_social">
                     <div class="title">
                         <p class="bold">Socials</p>
